<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="app_name">The Dicer</string>
	<string name="result">RESULT</string>
	<string name="totalButtonTxt">Total</string>
	<string name="individualButtonTxt">Individuals</string>
	<string name="dTxt">D</string>
	<string name="dieTypeTxt">Type</string>
	<string name="dieQtyTxt">Qty</string>
	<string name="sliderDieQty">Qty</string>
	<string name="sliderActual">1</string>
	<string name="d2">d2</string>
	<string name="d4">d4</string>
	<string name="d6">d6</string>
	<string name="d8">d8</string>
	<string name="d10">d10</string>
	<string name="d12">d12</string>
	<string name="d20">d20</string>
	<string name="d100">d100</string>
	<string name="headerImage">Header Pic</string>
</resources>
