<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="org.howardbates.thedicer.MainActivity"
    android:background="#fbfdfd">

	<TextView
		android:layout_width="320dp"
		android:layout_height="60dp"
		android:textAppearance="?android:attr/textAppearanceLarge"
		android:id="@+id/displayResult"
		android:background="#0f3a5e"
		android:gravity="center_vertical|center_horizontal"
		android:numeric="integer"
		android:textAlignment="center"
		android:textColor="#ffffff"
		android:textStyle="bold"
		android:typeface="monospace"
		android:visibility="visible"
		android:hint="@string/result"
		android:phoneNumber="false"
		android:layout_alignParentBottom="true"
		android:layout_centerHorizontal="true"/>

	<Button
		android:layout_width="115dp"
		android:layout_height="wrap_content"
		android:text="@string/totalButtonTxt"
		android:id="@+id/totalButton"
		android:textStyle="bold"
		android:typeface="normal"
		android:layout_alignTop="@+id/individualButton"
		android:layout_alignLeft="@+id/displayResult"
		android:layout_alignStart="@+id/displayResult"
		android:onClick="totalButtonClick"/>

	<EditText
		android:layout_width="70dp"
		android:layout_height="40dp"
		android:inputType="phone"
		android:hint="@string/dieQtyTxt"
		android:ems="100"
		android:id="@+id/dieQty"
		android:textStyle="bold"
		android:layout_marginBottom="24dp"
		android:gravity="center_vertical|center_horizontal"
		android:layout_above="@+id/totalButton"
		android:layout_alignRight="@+id/totalButton"
		android:layout_alignEnd="@+id/totalButton"/>

	<EditText
		android:layout_width="70dp"
		android:layout_height="40dp"
		android:inputType="phone"
		android:hint="@string/dieTypeTxt"
		android:ems="100"
		android:id="@+id/dieType"
		android:gravity="center_vertical|center_horizontal"
		android:textStyle="bold"
		android:layout_alignBottom="@+id/textView"
		android:layout_alignLeft="@+id/individualButton"
		android:layout_alignStart="@+id/individualButton"/>

	<TextView
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:textAppearance="?android:attr/textAppearanceLarge"
		android:text="@string/dTxt"
		android:id="@+id/textView"
		android:layout_alignBottom="@+id/dieQty"
		android:layout_centerHorizontal="true"
		android:gravity="center|center_vertical|center_horizontal"
		android:textStyle="bold"/>

	<ImageView
		android:layout_width="100dp"
		android:layout_height="60dp"
		android:id="@+id/imageView"
		android:background="@drawable/dice"
		android:layout_alignParentTop="true"
		android:layout_centerHorizontal="true"
		android:contentDescription="@string/headerImage"/>

	<Button
		android:layout_width="115dp"
		android:layout_height="wrap_content"
		android:text="@string/individualButtonTxt"
		android:id="@+id/individualButton"
		android:gravity="center_vertical|center_horizontal"
		android:textStyle="bold"
		android:layout_marginBottom="38dp"
		android:layout_above="@+id/displayResult"
		android:layout_alignRight="@+id/displayResult"
		android:layout_alignEnd="@+id/displayResult"
		android:onClick="individualButtonClick"/>

	<SeekBar
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:id="@+id/seekBar"
		android:layout_below="@+id/imageView"
		android:layout_alignParentLeft="true"
		android:layout_alignParentStart="true"
		android:layout_marginTop="32dp"
		android:layout_alignParentRight="true"
		android:layout_alignParentEnd="true"
		android:max="10"/>

	<RadioGroup
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal"
		android:id="@+id/radioGroup"
		android:layout_below="@+id/seekBar"
		android:layout_alignParentLeft="true"
		android:layout_alignParentStart="true"
		android:layout_marginTop="44dp">

		<RadioButton
			android:text="@string/d2"
			android:button="@null"
			android:drawableBottom="@android:drawable/btn_radio"
			android:gravity="center"
			android:textStyle="bold"
			android:layout_weight="1"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:id="@+id/d2"/>

		<RadioButton
			android:text="@string/d4"
			android:button="@null"
			android:drawableBottom="@android:drawable/btn_radio"
			android:gravity="center"
			android:textStyle="bold"
			android:layout_weight="1"
			android:id="@+id/d4"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"/>

		<RadioButton
			android:text="@string/d6"
			android:button="@null"
			android:drawableBottom="@android:drawable/btn_radio"
			android:gravity="center"
			android:textStyle="bold"
			android:layout_weight="1"
			android:id="@+id/d6"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"/>

		<RadioButton
			android:text="@string/d8"
			android:button="@null"
			android:drawableBottom="@android:drawable/btn_radio"
			android:gravity="center"
			android:textStyle="bold"
			android:layout_weight="1"
			android:id="@+id/d8"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"/>

		<RadioButton
			android:text="@string/d10"
			android:button="@null"
			android:drawableBottom="@android:drawable/btn_radio"
			android:gravity="center"
			android:textStyle="bold"
			android:layout_weight="1"
			android:id="@+id/d10"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"/>

		<RadioButton
			android:text="@string/d12"
			android:button="@null"
			android:drawableBottom="@android:drawable/btn_radio"
			android:gravity="center"
			android:textStyle="bold"
			android:layout_weight="1"
			android:id="@+id/d12"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"/>

		<RadioButton
			android:text="@string/d20"
			android:button="@null"
			android:drawableBottom="@android:drawable/btn_radio"
			android:gravity="center"
			android:textStyle="bold"
			android:layout_weight="1"
			android:id="@+id/d20"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"/>

		<RadioButton
			android:text="@string/d100"
			android:button="@null"
			android:drawableBottom="@android:drawable/btn_radio"
			android:gravity="center"
			android:textStyle="bold"
			android:layout_weight="1"
			android:id="@+id/d100"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:checked="false"/>

	</RadioGroup>

	<TextView
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text=""
		android:id="@+id/qtySeekLabel"
		android:layout_below="@+id/seekBar"
		android:layout_centerHorizontal="true"/>

	<TextView
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/dieQtyTxt"
		android:id="@+id/textView3"
		android:layout_below="@+id/seekBar"
		android:layout_alignLeft="@+id/totalButton"
		android:layout_alignStart="@+id/totalButton"/>

</RelativeLayout>
